# room-booking-database

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: room_booking.csv  room_booking.xlsx
databases/: ROOM_BOOKINGS.db
room_booking/common/: sqlite_table.py
room_booking/src/: create_database.py  task_1.py  task_2.py
room_booking/tables/: __init__.py  room_booking.py
sql/: task_1.sql  task_2.sql
tests/: test_room_booking.py
